; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/vusb/extr_vusb.c_send_mouse.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/vusb/extr_vusb.c_send_mouse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@REPORT_ID_MOUSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @send_mouse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_mouse(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_2__, align 4
  store i32* %0, i32** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %4, align 4
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 1
  %8 = load i32, i32* @REPORT_ID_MOUSE, align 4
  store i32 %8, i32* %7, align 4
  %9 = call i64 (...) @usbInterruptIsReady3()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = bitcast %struct.TYPE_2__* %3 to i8*
  %13 = call i32 @usbSetInterrupt3(i8* %12, i32 8)
  br label %14

14:                                               ; preds = %11, %1
  ret void
}

declare dso_local i64 @usbInterruptIsReady3(...) #1

declare dso_local i32 @usbSetInterrupt3(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
